Fix Watched status on mobile #51

--- a/default.css
+++ b/default.css
@@ -1323,7 +1323,8 @@ h2 {
   top: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(-135deg, rgba(0, 205, 0, 0.4), transparent);
+  background: var(--accent);
+  opacity: 0.45;
 }
 .layout-mobile .listItemIndicators > * {
   display: none;
